Fix unsupported notice not supporting dark mode (#1748)
* Fix unsupported notice not supporting dark mode

* Fix popover-header-bg being calculated on compile time

* Use calculatable value for popover-header-bg (unused)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -56,3 +56,7 @@ $pagination-color: var(--pagination-color);
 $pagination-hover-color: var(--pagination-color);
 $pagination-hover-bg: var(--pagination-hover);
 $pagination-active-bg: var(--pagination-active);
+
+// Popover
+$popover-bg: var(--containers-background);
+$popover-header-bg: rgba(0, 0, 0, 0);
